Fixed setting overlapping

--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,10 @@ button {
   margin-bottom: 15px;
 }
 
+button:hover {
+  background-color: var(--dusty-pink);
+}
+
 
 .switch {
   position: relative;
